feat: 初始化PDF工具合集

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,7 +6,7 @@
 @import "fumadocs-ui/css/neutral.css";
 @import "fumadocs-ui/css/preset.css";
 
-@source '../node_modules/fumadocs-ui/dist/**/*.js';
+@source "../node_modules/fumadocs-ui/dist/**/*.js";
 
 @custom-variant dark (&:is(.dark *));
 
@@ -237,16 +237,21 @@
   --shadow-color: #1a1a1a;
   --shadow-2xs: 0px 0px 0px 0px hsl(0 0% 10.1961% / 0);
   --shadow-xs: 0px 0px 0px 0px hsl(0 0% 10.1961% / 0);
-  --shadow-sm: 0px 0px 0px 0px hsl(0 0% 10.1961% / 0), 0px 1px 2px -1px
-    hsl(0 0% 10.1961% / 0);
-  --shadow: 0px 0px 0px 0px hsl(0 0% 10.1961% / 0), 0px 1px 2px -1px
-    hsl(0 0% 10.1961% / 0);
-  --shadow-md: 0px 0px 0px 0px hsl(0 0% 10.1961% / 0), 0px 2px 4px -1px
-    hsl(0 0% 10.1961% / 0);
-  --shadow-lg: 0px 0px 0px 0px hsl(0 0% 10.1961% / 0), 0px 4px 6px -1px
-    hsl(0 0% 10.1961% / 0);
-  --shadow-xl: 0px 0px 0px 0px hsl(0 0% 10.1961% / 0), 0px 8px 10px -1px
-    hsl(0 0% 10.1961% / 0);
+  --shadow-sm:
+    0px 0px 0px 0px hsl(0 0% 10.1961% / 0),
+    0px 1px 2px -1px hsl(0 0% 10.1961% / 0);
+  --shadow:
+    0px 0px 0px 0px hsl(0 0% 10.1961% / 0),
+    0px 1px 2px -1px hsl(0 0% 10.1961% / 0);
+  --shadow-md:
+    0px 0px 0px 0px hsl(0 0% 10.1961% / 0),
+    0px 2px 4px -1px hsl(0 0% 10.1961% / 0);
+  --shadow-lg:
+    0px 0px 0px 0px hsl(0 0% 10.1961% / 0),
+    0px 4px 6px -1px hsl(0 0% 10.1961% / 0);
+  --shadow-xl:
+    0px 0px 0px 0px hsl(0 0% 10.1961% / 0),
+    0px 8px 10px -1px hsl(0 0% 10.1961% / 0);
   --shadow-2xl: 0px 0px 0px 0px hsl(0 0% 10.1961% / 0);
   --tracking-normal: 0em;
   --spacing: 0.25rem;
@@ -297,16 +302,21 @@
   --shadow-color: #1a1a1a;
   --shadow-2xs: 0px 0px 0px 0px hsl(0 0% 10.1961% / 0);
   --shadow-xs: 0px 0px 0px 0px hsl(0 0% 10.1961% / 0);
-  --shadow-sm: 0px 0px 0px 0px hsl(0 0% 10.1961% / 0), 0px 1px 2px -1px
-    hsl(0 0% 10.1961% / 0);
-  --shadow: 0px 0px 0px 0px hsl(0 0% 10.1961% / 0), 0px 1px 2px -1px
-    hsl(0 0% 10.1961% / 0);
-  --shadow-md: 0px 0px 0px 0px hsl(0 0% 10.1961% / 0), 0px 2px 4px -1px
-    hsl(0 0% 10.1961% / 0);
-  --shadow-lg: 0px 0px 0px 0px hsl(0 0% 10.1961% / 0), 0px 4px 6px -1px
-    hsl(0 0% 10.1961% / 0);
-  --shadow-xl: 0px 0px 0px 0px hsl(0 0% 10.1961% / 0), 0px 8px 10px -1px
-    hsl(0 0% 10.1961% / 0);
+  --shadow-sm:
+    0px 0px 0px 0px hsl(0 0% 10.1961% / 0),
+    0px 1px 2px -1px hsl(0 0% 10.1961% / 0);
+  --shadow:
+    0px 0px 0px 0px hsl(0 0% 10.1961% / 0),
+    0px 1px 2px -1px hsl(0 0% 10.1961% / 0);
+  --shadow-md:
+    0px 0px 0px 0px hsl(0 0% 10.1961% / 0),
+    0px 2px 4px -1px hsl(0 0% 10.1961% / 0);
+  --shadow-lg:
+    0px 0px 0px 0px hsl(0 0% 10.1961% / 0),
+    0px 4px 6px -1px hsl(0 0% 10.1961% / 0);
+  --shadow-xl:
+    0px 0px 0px 0px hsl(0 0% 10.1961% / 0),
+    0px 8px 10px -1px hsl(0 0% 10.1961% / 0);
   --shadow-2xl: 0px 0px 0px 0px hsl(0 0% 10.1961% / 0);
 }
 
